app/styles/bloqsproject.scss
/* ... */
.submenu__button--back {
    border-bottom: 1px solid #edf1f2;
    width: 100%;
    padding: .5em;
    text-align: left;
    pointer-events: all;
    padding-left: 20px;
}

.actions__menu__dropdown {
    position: absolute;
    height: auto;
    width: auto;
    background-color: white;
    left: 0;
    top: 35px;
    border: 1px solid #dadada;
    border-top: 0;
    white-space: nowrap;
    z-index: 8;
    border-left: 1px solid white;
    padding-top: .5em;
    li:last-child {
        margin-bottom: .5em;
    }
}

.dropdown__item {
    display: flex;
    padding: .3em 1em;
    align-items: center;
    a {
        text-decoration: none;
        color: #333;
    }
    &:hover {
        background-color: #ebebeb;
        cursor: pointer;
    }
    &[disabled] {
        pointer-events: none;
        color: gray;
        .svg-icon {
            fill: gray;
        }
    }
    .contact-us-email {
        text-align: left;
        width: 150px;
        line-height: initial;
    }
}

.dropdown__item--separator {
    border-bottom: 1px solid #dadada;
    margin-top: .5em;
    margin-bottom: .5em;
}

.actions__menu--selected {
    z-index: 8;
}

.actions__menu__button {
    min-height: 19px;
    color: #333;
    padding: .7em;
    margin-top: .7em;
    &.actions__menu--selected {
        -webkit-box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.2), 0 15px 12px 1px rgba(0, 0, 0, 0.2);
        -moz-box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.2), 0 15px 12px 1px rgba(0, 0, 0, 0.2);
        box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.2), 0 15px 12px 1px rgba(0, 0, 0, 0.2);
        &:after {
            content: '';
            height: 10px;
            width: 100%;
            background-color: white;
            position: absolute;
            left: 0;
            top: 25px;
            z-index: 10;
        }
        &:before {
            content: '';
            height: 10px;
            width: 100%;
            background-color: white;
            position: absolute;
            left: 0;
            top: 2px;
            z-index: 10;
        }
    }
    &:hover {
        cursor: pointer;
        background-color: #ebebeb;
    }
    // &:after {
    //     content: "";
    //     width: 100%;
    //     height: 8px;
    //     display: block;
    //     background-color: white;
    //     position: absolute;
    //     z-index: 10;
    //     left: 0;
    //     top: 22px;
    // }
}

.submenu__title {
    padding: .5em;
    text-align: left;
    padding-top: 1em;
    padding-bottom: 1em;
    padding-left: 20px;
    border-bottom: 1px solid #edf1f2;
}

.menu--level-one {
    width: 265px;
    max-width: 265px;
    // background-color: gray;
}

.menu--level-one__toolbox {
    width: 265px;
    max-width: 265px;
    // background-color: gray;
    position: absolute;
    right: 0;
    z-index: 1;
}

.disabled--level {
    pointer-events: none;
}

.submenu--level-one {
    width: 190px;
    max-width: 190px;
    left: 55px;
    pointer-events: none;
}

.submenu--level-one__toolbox {
    width: 400px;
    max-width: 400px;
    left: 55px;
}

.submenu--level-two {
    width: 525px;
    max-width: 525px;
    pointer-events: none;
    display: table;
    .submenu__button--back {
        pointer-events: all;
    }
}

.bloqs--toolbox--main {
    height: calc(100% - 90px);
    pointer-events: auto;
    width: 190px;
}

.submenu--item--bottom {
    font-weight: normal;
    border-top: 1px solid #edf1f2;
    border-bottom: 1px solid #edf1f2;
    padding-top: 1em;
    padding-bottom: 1em;
    padding-left: 1em;
    position: absolute;
    bottom: 0;
    width: 525px;
    .svg-icon {
        position: absolute;
        right: 15px;
        width: 10px;
        top: 1em;
    }
    &:hover {
        cursor: pointer;
    }
}

.content--main--collapse {
    // max-height: calc(100% - 40px);
}

.svg-icon--animated {
    transition: transform 250ms;
}

.svg-icon--rotate {
    transform: rotate(-180deg);
}

.tab--make {
    height: 100%;
    width: 100%;
}

.tab--make__block {
    height: 100%;
    &.first--flex {
        order: 0;
        flex: 1 0;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
    }
    &.second--flex {
        order: 1;
        flex: 1 0;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
    }
}

.header--collapsed {
    max-height: 0;
    min-height: 0;
    z-index: -1;
}

.container--main {
    height: 100%;
    transition: transform 250ms;
}

.nav__item--white {
    background-color: #fcfcfc;
    &:hover {
        background-color: #ebebeb;
    }
}

.svg-icon--right {
    float: right;
    width: 8px;
}

.tabs__item--clickable {
    padding: 1.3em;
    cursor: pointer;
    &:hover {
        background-color: #ebebeb;
    }
}

.console--title {
    padding: 1em;
    color: #373b46;
    font-weight: bold;
    border-bottom: 1px solid #dadada;
    font-size: 15px;
}

.console--content {
    padding: 1em;
    display: block;
    width: 100%;
    overflow: auto;
}

.toolbox--main {
    z-index: 9;
    height: 100%;
    min-width: 210px;
    right: 0;
    position: fixed;
    transition-property: top;
    transition-duration: 250ms;
    top: #{$titleHeightNumber + $makeActionsHeightNumber}px;
    .submenu-level {
        width: calc(100% - 53px);
    }
    &.navbar--collapsed {
        top: #{$makeActionsHeightNumber}px;
    }
}

&.btn--zowi {
    background-color: #60bcc9;
    color: white;
}

&.btn--evolution {
    background-color: #9a0768;
    color: white;
}
/* ... */

